Edit random action model title

--- a/00_random_action.ipynb
+++ b/00_random_action.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Playback saved model"
+    "## Random action model"
    ]
   },
   {
@@ -24,14 +24,6 @@
     "import pandas as pd\n",
     "import random\n",
     "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "\n",
-    "# Use a double ended queue (deque) for memory\n",
-    "# When memory is full, this will replace the oldest value with the new one\n",
-    "from collections import deque\n",
-    "\n",
     "# Supress all warnings (e.g. deprecation warnings) for regular use\n",
     "import warnings\n",
     "\n",
@@ -44,13 +36,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_PATH = './models/'\n",
-    "\n",
-    "MODELS = {\n",
-    "    'ddqn':'ddqn_policy.pt',\n",
-    "    '3dqn': '3dqn_policy.pt'\n",
-    "}\n",
-    "\n",
     "# Replicate runs\n",
     "TEST_EPISODES = 30\n",
     "\n",
