--- a/00_random_action.ipynb
+++ b/00_random_action.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Random action model"
+    "## Random action model\n",
+    "\n",
+    "Provide baseline performance of choosing ambulance dispatch points at random on each allocation."
    ]
   },
   {
@@ -547,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
