Add ambo world YouTube link to notebooks

--- a/00_random_action.ipynb
+++ b/00_random_action.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "## Random action model\n",
     "\n",
-    "Provide baseline performance of choosing ambulance dispatch points at random on each allocation."
+    "Provide baseline performance of choosing ambulance dispatch points at random on each allocation.\n",
+    "\n",
+    "For description of simulated ambulance world, see: https://youtu.be/UYJtOLYcOU8"
    ]
   },
   {
