--- a/06_qambo_prioritised_replay_noisy_3dqn.ipynb
+++ b/06_qambo_prioritised_replay_noisy_3dqn.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Prioritised Replay Noisy Duelling Double Deep Q Learning - A simple ambulance dispatch point allocation model\n",
-    "Double Deep Q Learning - A simple ambulance dispatch point allocation model\n",
+    "\n",
+    "For description of simulated ambulance world, see: https://youtu.be/UYJtOLYcOU8\n",
     "\n",
     "## Reinforcement learning introduction\n",
     "\n",
@@ -1009,7 +1010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
