--- a/07_qambo_bagging_ddqn.ipynb
+++ b/07_qambo_bagging_ddqn.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Bagging Double Deep Q Learning - A simple ambulance dispatch point allocation model\n",
     "\n",
+    "For description of simulated ambulance world, see: https://youtu.be/UYJtOLYcOU8\n",
+    "\n",
     "## Reinforcement learning introduction\n",
     "\n",
     "### RL involves:\n",
@@ -822,7 +824,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
