--- a/11_qambo_noisy_bagging_prioritised_3dqn.ipynb
+++ b/11_qambo_noisy_bagging_prioritised_3dqn.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Nosy Bagging Duelling Prioritised Replay Double Deep Q Learning - A simple ambulance dispatch point allocation model\n",
     "\n",
+    "For description of simulated ambulance world, see: https://youtu.be/UYJtOLYcOU8\n",
+    "\n",
     "## Reinforcement learning introduction\n",
     "\n",
     "### RL involves:\n",
@@ -1041,7 +1043,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
