--- a/09_qambo_noisy_bagging_ddqn.ipynb
+++ b/09_qambo_noisy_bagging_ddqn.ipynb
@@ -93,7 +93,10 @@
     "\n",
     "## References\n",
     "\n",
-    "Double DQN: \n",
+    "Double DQN:\n",
+    "\n",
+    "Mnih, V., Kavukcuoglu, K., Silver, D. et al. Human-level control through deep reinforcement learning. Nature 518, 529–533 (2015). https://doi.org/10.1038/nature14236\n",
+    "\n",
     "van Hasselt H, Guez A, Silver D. (2015) Deep Reinforcement Learning with Double Q-learning. arXiv:150906461 http://arxiv.org/abs/1509.06461\n",
     "\n",
     "Bagging:\n",
@@ -839,7 +842,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -853,7 +856,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
